syntax = "proto3";

package serialization.proto;

message ReadOnlyData {
  repeated string strings = 1;
}
